src/lsp/bridge/protocol/snapshots/kakehashi__lsp__bridge__protocol__client_capabilities__tests__bridge_client_capabilities_snapshot.snap
---
source: src/lsp/bridge/protocol/client_capabilities.rs
expression: capabilities
---
{
  "general": {
    "positionEncodings": [
      "utf-16"
    ]
  },
  "textDocument": {
    "completion": {
      "completionItem": {
        "insertReplaceSupport": true
      },
      "dynamicRegistration": false
    },
    "declaration": {
      "dynamicRegistration": false,
      "linkSupport": true
    },
    "definition": {
      "dynamicRegistration": false,
      "linkSupport": true
    },
    "diagnostic": {
      "dynamicRegistration": true,
      "relatedDocumentSupport": true
    },
    "documentHighlight": {
      "dynamicRegistration": false
    },
    "documentLink": {
      "dynamicRegistration": false,
      "tooltipSupport": true
    },
    "documentSymbol": {
      "dynamicRegistration": false,
      "hierarchicalDocumentSymbolSupport": true
    },
    "hover": {
      "dynamicRegistration": false
    },
    "implementation": {
      "dynamicRegistration": false,
      "linkSupport": true
    },
    "inlayHint": {
      "dynamicRegistration": false
    },
    "moniker": {
      "dynamicRegistration": false
    },
    "references": {
      "dynamicRegistration": false
    },
    "signatureHelp": {
      "dynamicRegistration": false
    },
    "typeDefinition": {
      "dynamicRegistration": false,
      "linkSupport": true
    }
  },
  "workspace": {
    "diagnostics": {
      "refreshSupport": true
    }
  }
}
